Fix layout on iOS 7 & 8

--- a/src/styl/consent.styl
+++ b/src/styl/consent.styl
@@ -57,7 +57,7 @@
   }
 
 
-  &.old-androids {
+  &.android4-ios7-ios8 {
     .consent-button-container {
       position: absolute;
       bottom: 0;
